# src/routes/stores.route.js
@@ -1,6 +1,6 @@
 import express from "express";
 import asyncHandler from 'express-async-handler';
-import {storesAdd, reviewAdd, missionAdd, missionChallenge, reviewPreview} from "../controllers/stores.controller.js";
+import {storesAdd, reviewAdd, missionAdd, missionChallenge, reviewPreview, missionPreview} from "../controllers/stores.controller.js";
 export const storesRouter = express.Router({mergeParams: true});
 
 //9주차
@@ -19,3 +19,6 @@ storesRouter.patch('/missions', asyncHandler(missionChallenge));
 //10주차
 //가게 리뷰 목록 조회
 storesRouter.get('/reviews', asyncHandler(reviewPreview));
+
+//특정 가게 미션 목록 조회
+storesRouter.get('/missions', asyncHandler(missionPreview));
