# swagger/getStoreMission.swagger.yaml
@@ -1,16 +1,16 @@
 paths:
-  /stores/{storeId}/reviews:
+  /stores/{storeId}/missions:
     get:
       tags:
         - Stores
-      summary: 가게 별 리뷰 목록 조회
+      summary: 가게 별 미션 목록 조회
       parameters:
         - name: storeId
           in: path
           schema:
             type: integer
           required: true
-        - name: reviewId
+        - name: missionId
           in: query
           required: false
           schema:
@@ -26,7 +26,7 @@ paths:
                 type: integer
       responses:
         '200':
-          description: 리뷰 조회 성공!
+          description: 미션 조회 성공!
           schema:
             type: object
             properties:
@@ -45,18 +45,20 @@ paths:
               data:
                 type: array
                 example: {
-                  "reviewData": [
+                  "missionData": [
                     {
-                      "user_name": "SwaggerTest1",
-                      "star": 5,
-                      "review_body": "리뷰2",
-                      "create_date": "2000.03.01"
+                      "mission_body": "미션내용",
+                      "term": "D-7",
+                      "reward": "300P",
+                      "complete": "진행중",
+                      "success": null
                     },
                     {
-                      "user_name": "SwaggerTest2",
-                      "rate": 4.5,
-                      "review_body": "리뷰1",
-                      "create_date": "2000.02.02"
+                      "mission_body": "미션내용",
+                      "term": "D-9",
+                      "reward": "450P",
+                      "complete": "진행완료",
+                      "success": "성공"
                     }
                   ],
                   "cursorId": 1
